objects/Operations_Request__c.object
<CustomObject>
    <fields>
        <fullName>SKU_Setup_Required__c</fullName>
        <label>SKU Setup Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU#</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Operations Requests</relationshipLabel>
        <relationshipName>Operations_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_Method__c</fullName>
        <label>Ship Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Dom_Int_del__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AGS</fullName>
                </value>
                <value>
                    <fullName>Watkins</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>DART</fullName>
                </value>
                <value>
                    <fullName>Main Freight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Delivery_instructions__c</fullName>
        <inlineHelpText>Any specific delivery information needed (Cert. of Insurance, time requirements, delivery requirement form, etc.)</inlineHelpText>
        <label>Special Delivery Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Square_Feet__c</fullName>
        <inlineHelpText>Yardage found in IM10 additional measurements. Conversion rate 1 yard = 18 sq/ft</inlineHelpText>
        <label>Square Feet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Customer Accepted</fullName>
                </value>
                <value>
                    <fullName>Customer Declined</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit__c</fullName>
        <label>Submit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Budget__c</fullName>
        <inlineHelpText>Total $ Amount of Project</inlineHelpText>
        <label>Target Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Payment_Received__c</fullName>
        <formula>Opportunity__r.Total_Payment_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Payment Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>COI</fullName>
                </value>
                <value>
                    <fullName>COL</fullName>
                </value>
                <value>
                    <fullName>COM</fullName>
                </value>
                <value>
                    <fullName>Confirmed Quote</fullName>
                </value>
                <value>
                    <fullName>Core Inventory</fullName>
                </value>
                <value>
                    <fullName>Core Margin</fullName>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>DC Pickup</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Expedite Domestic</fullName>
                </value>
                <value>
                    <fullName>Expedite International</fullName>
                </value>
                <value>
                    <fullName>Freight Request</fullName>
                </value>
                <value>
                    <fullName>Large Qty SPO</fullName>
                </value>
                <value>
                    <fullName>Lead Time</fullName>
                </value>
                <value>
                    <fullName>Model Room Sample</fullName>
                </value>
                <value>
                    <fullName>Permission to Exceed Guidelines</fullName>
                </value>
                <value>
                    <fullName>POD</fullName>
                </value>
                <value>
                    <fullName>SM</fullName>
                </value>
                <value>
                    <fullName>Special Handling</fullName>
                </value>
                <value>
                    <fullName>Vendor Air Freight</fullName>
                </value>
                <value>
                    <fullName>Yardage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPS_Account_Number__c</fullName>
        <label>UPS Account Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgency_Factor_Value__c</fullName>
        <formula>IF(ISPICKVAL(Urgency_Override__c , &quot;Green&quot;),&quot;Green&quot;,

IF(ISPICKVAL(Urgency_Override__c, &quot;Yellow&quot;),&quot;Yellow&quot;,

IF(ISPICKVAL(Urgency_Override__c, &quot;Red&quot;),&quot;Red&quot;,

IF(
AND(OR(RecordType.Name = &quot;Side Mark&quot;,RecordType.Name = &quot;POD&quot;,RecordType.Name = &quot;Freight Request&quot;,RecordType.Name = &quot;Vendor Air Freight&quot;,RecordType.Name = &quot;DC Pickup&quot;),
OR(
(Next_Contact_with_Client__c)-DATEVALUE(CreatedDate)&lt; 21,
DATEVALUE(LastModifiedDate)-DATEVALUE(CreatedDate) = 2)),
&quot;Yellow&quot;,

IF(DATEVALUE(LastModifiedDate)- DATEVALUE(CreatedDate) &gt; 3,&quot;Red&quot;,

IF(AND(OR(RecordType.Name = &quot;Side Mark&quot;,RecordType.Name = &quot;POD&quot;,RecordType.Name = &quot;Freight Request&quot;,RecordType.Name = &quot;Vendor Air Freight&quot;,RecordType.Name = &quot;DC Pickup&quot;),(Next_Contact_with_Client__c) - DATEVALUE(CreatedDate) &gt; 21),&quot;Green&quot;,

&quot;Green&quot;
))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency Factor Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgency_Factor__c</fullName>
        <formula>IF(ISPICKVAL(Urgency_Override__c , &quot;Green&quot;),IMAGE(&quot;/resource/Confirm&quot;, &quot;confirm32&quot;),

IF(ISPICKVAL(Urgency_Override__c, &quot;Yellow&quot;),IMAGE(&quot;/resource/Warning&quot;, &quot;warning32&quot;),

IF(ISPICKVAL(Urgency_Override__c, &quot;Red&quot;),IMAGE(&quot;/resource/Error&quot;, &quot;error&quot;),

IF(
AND(OR(RecordType.Name = &quot;Side Mark&quot;,RecordType.Name = &quot;POD&quot;,RecordType.Name = &quot;Freight Request&quot;,RecordType.Name = &quot;Vendor Air Freight&quot;,RecordType.Name = &quot;DC Pickup&quot;),
OR(
(Next_Contact_with_Client__c)-DATEVALUE(CreatedDate)&lt; 21,
DATEVALUE(LastModifiedDate)-DATEVALUE(CreatedDate) = 2)),
IMAGE(&quot;/resource/Warning&quot;, &quot;warning32&quot;),

IF(DATEVALUE(LastModifiedDate)- DATEVALUE(CreatedDate) &gt; 3,IMAGE(&quot;/resource/Error&quot;, &quot;error&quot;),

IF(AND(OR(RecordType.Name = &quot;Side Mark&quot;,RecordType.Name = &quot;POD&quot;,RecordType.Name = &quot;Freight Request&quot;,RecordType.Name = &quot;Vendor Air Freight&quot;,RecordType.Name = &quot;DC Pickup&quot;),(Next_Contact_with_Client__c) - DATEVALUE(CreatedDate) &gt; 21),IMAGE(&quot;/resource/Confirm&quot;, &quot;confirm32&quot;),

IMAGE(&quot;/resource/Confirm&quot;, &quot;confirm32&quot;)
))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency Factor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgency_Override__c</fullName>
        <label>Urgency Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Request_Date__c</fullName>
        <inlineHelpText>Date Ops sent request to vendor</inlineHelpText>
        <label>Vendor Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor_Tracking__c</fullName>
        <label>Vendor Tracking #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardage__c</fullName>
        <inlineHelpText>Yardage found in IM10 additional measurements. Conversion rate 1 yard = 18 sq/ft</inlineHelpText>
        <label>Yardage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Operations Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Urgency_Factor__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Type__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Order__c</columns>
        <columns>Aging_Days__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Canada</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Urgency_Factor__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Type__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Order__c</columns>
        <columns>Aging_Days__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Owner__c</field>
            <operation>equals</operation>
            <value>TomFreeman,EricHenshel,AliLayton</value>
        </filters>
        <label>Canada</label>
    </listViews>
    <listViews>
        <fullName>Customer_Accepted</fullName>
        <columns>NAME</columns>
        <columns>Urgency_Factor__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Oppty_Number__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Aging_Days__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Type__c</columns>
        <columns>Order__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Customer Accepted</value>
        </filters>
        <label>4. Customer Accepted</label>
    </listViews>
    <listViews>
        <fullName>FL_Carribean</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Urgency_Factor__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Type__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Order__c</columns>
        <columns>Aging_Days__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Owner__c</field>
            <operation>equals</operation>
            <value>AmyHaeffner,DebbieKing,DeborahKing,LindaThao</value>
        </filters>
        <label>FL &amp; Carribean</label>
    </listViews>
    <listViews>
        <fullName>International</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Urgency_Factor__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Type__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Order__c</columns>
        <columns>Aging_Days__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Owner__c</field>
            <operation>equals</operation>
            <value>AnneKupillas,FrancaBurgan,MichaelSuarez,MariaSarria</value>
        </filters>
        <label>International</label>
    </listViews>
    <listViews>
        <fullName>Logistics_Operations_Operations_Request1</fullName>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Urgency_Factor__c</columns>
        <columns>Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Oppty_Number__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Order__c</columns>
        <columns>Aging_Days__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Customer Declined,Closed</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Customer Accepted,Customer Declined,Back to PM,Recalled</value>
        </filters>
        <label>1. Logistics Operations</label>
        <queue>Logistics_Operations</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MIdwest</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Urgency_Factor__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Type__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Order__c</columns>
        <columns>Aging_Days__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Owner__c</field>
            <operation>equals</operation>
            <value>ToddHilt,ValiaPoursartip,RoxanneMcElroy</value>
        </filters>
        <label>Midwest</label>
    </listViews>
    <listViews>
        <fullName>Mid_Atlantic</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Urgency_Factor__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Type__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Order__c</columns>
        <columns>Aging_Days__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Owner__c</field>
            <operation>equals</operation>
            <value>AllisonFalone,ReneeValega</value>
        </filters>
        <label>Mid-Atlantic</label>
    </listViews>
    <listViews>
        <fullName>Mountain</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Urgency_Factor__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Type__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Order__c</columns>
        <columns>Aging_Days__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Owner__c</field>
            <operation>equals</operation>
            <value>AndreaTurner,ChrissyBurrows</value>
        </filters>
        <label>Mountain</label>
    </listViews>
    <listViews>
        <fullName>NorthEast</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Urgency_Factor__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Type__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Order__c</columns>
        <columns>Aging_Days__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Owner__c</field>
            <operation>equals</operation>
            <value>AliciaRietzel,JosieDriscoll,RyanHaggett,SelinaGaitan,CarleeScanlon,MinhBui</value>
        </filters>
        <label>Northeast</label>
    </listViews>
    <listViews>
        <fullName>Northwest</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Urgency_Factor__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Type__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Order__c</columns>
        <columns>Aging_Days__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Owner__c</field>
            <operation>equals</operation>
            <value>LauraSievers,JenniferAnderson,HaleyTaylor</value>
        </filters>
        <label>Northwest</label>
    </listViews>
    <listViews>
        <fullName>Planning_Operations_Operations_Request1</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Urgency_Factor__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Type__c</columns>
        <columns>Oppty_Number__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Order__c</columns>
        <columns>Aging_Days__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Customer Accepted,Customer Declined,Back to PM,Recalled</value>
        </filters>
        <label>2. Planning Operations</label>
        <queue>Planning_Operations</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Product_COM</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Urgency_Factor__c</columns>
        <columns>Type__c</columns>
        <columns>Oppty_Number__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Order__c</columns>
        <columns>Aging_Days__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Operations_Request__c.COM_COL</value>
        </filters>
        <label>3-2 Product COM</label>
        <queue>Product_Operations</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Product_Custom</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Urgency_Factor__c</columns>
        <columns>Type__c</columns>
        <columns>Oppty_Number__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Order__c</columns>
        <columns>Aging_Days__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Operations_Request__c.Custom_Product</value>
        </filters>
        <label>3-2 Product Custom</label>
        <queue>Product_Operations</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Product_Info</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Urgency_Factor__c</columns>
        <columns>Type__c</columns>
        <columns>Oppty_Number__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Order__c</columns>
        <columns>Aging_Days__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Operations_Request__c.Product_Information</value>
        </filters>
        <label>3-1 Product Info</label>
        <queue>Product_Operations</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>OPS-{0000000}</displayFormat>
        <label>Operations Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operations Requests</pluralLabel>
    <recordTypes>
        <fullName>COM_COL</fullName>
        <active>true</active>
        <description>Product Request-Customers Own Material/Leather</description>
        <label>COM/COL</label>
    </recordTypes>
    <recordTypes>
        <fullName>Custom_Product</fullName>
        <active>true</active>
        <description>Product Request-for Custom Product Specifications</description>
        <label>Custom Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>DC_Pickup</fullName>
        <active>true</active>
        <description>Logistics Request for Customers who want to pick up Order at RH DCs</description>
        <label>DC Pickup</label>
    </recordTypes>
    <recordTypes>
        <fullName>Freight_Request</fullName>
        <active>true</active>
        <description>Logistics Request for Domestic and International Freight Quotes</description>
        <label>Freight Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inventory_Request</fullName>
        <active>true</active>
        <description>Planning Request - for &gt;50% OH Retail Inventory AND &gt; 25% discount</description>
        <label>Inventory Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Margin_Request</fullName>
        <active>true</active>
        <description>Planning Request - for Blended MMU- Margin Request &lt; 40% margin</description>
        <label>Margin Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>POD</fullName>
        <active>true</active>
        <description>Logistics Request for Proof of Delivery</description>
        <label>POD</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Information</fullName>
        <active>true</active>
        <description>Product Request for PI Questions (will link to Product Records)</description>
        <label>Product Information</label>
    </recordTypes>
    <recordTypes>
        <fullName>SKU_Setup</fullName>
        <active>true</active>
        <description>Planning Request for when a sku does not already exist</description>
        <label>SKU Setup</label>
    </recordTypes>
    <recordTypes>
        <fullName>SPO_Quote</fullName>
        <active>true</active>
        <description>Planning Request for Lead Time, Cost or Large Quantity SPecial Orders</description>
        <label>SPO Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Side_Mark</fullName>
        <active>true</active>
        <description>Logistics Request for carton-specific labeling</description>
        <label>Side Mark</label>
    </recordTypes>
    <recordTypes>
        <fullName>Spec_Sheet</fullName>
        <active>true</active>
        <description>Product Request for customer-facing spec sheet</description>
        <label>Spec Sheet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Swatches_Fabrics_Finishes</fullName>
        <active>true</active>
        <description>Product Request - only when not available in CW, Web or Office Inventory</description>
        <label>Swatches, Fabrics &amp; Finishes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor_Air_Freight</fullName>
        <active>true</active>
        <description>Logistics Request for Executive Approval</description>
        <label>Vendor Air Freight</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_Contract_User_Record_Type_Change</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(RecordTypeId)  &amp;&amp;  $Profile.Name = &apos;Contract&apos;</errorConditionFormula>
        <errorMessage>You cannot change the record type. Please contact your Business Administrator or Manager for assistance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_a_value_in_Checkbox_for_Inventor</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name  = &quot;Swatches, Fabrics &amp; Finishes&quot; &amp;&amp;    Checked_Inventory_CW_Web_Home_Office__c = false</errorConditionFormula>
        <errorDisplayField>Checked_Inventory_CW_Web_Home_Office__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
</CustomObject>